<resources>
    <string name="app_name">Attendance</string>
    <string name="gerer_groupes">Manage Groups</string>
    <string name="statistiques">Statistics</string>
    <string name="gerer_cours">Manage Courses</string>
    <string name="add">Add</string>
    <string name="import_course">Import</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="save">Save</string>
    <string name="course_name">Course Name</string>
    <string name="lecturer">Lecturer</string>
    <string name="lecturer_group">LECTURER</string>
    <string name="start_time">Start Time: </string>
    <string name="end_time">End Time: </string>
    <string name="start_time_hint">Start Time: hh:mm </string>
    <string name="end_time_hint">End Time: hh:mm </string>
    <string name="lecturer2">Lecturer: </string>
    <string name="location">Location: </string>
    <string name="location_">Location</string>
    <string name="description">Description</string>
    <string name="invalidCourseName">Please supply a valid course name.</string>
    <string name="invalidGroupName">Please supply a valid course name.</string>
    <string name="emptyGroupName">Please supply a group name.</string>
    <string name="emptyField">Please fill in all the necessary fields.</string>
    <string name="lectures">Lectures</string>
    <string name="action_to_perform">Which action would you like to perform ?</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="group_name">Group Name</string>
    <string name="new_group">New Group</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="no_group">NO GROUP</string>
    <string name="absent">Absent</string>
    <string name="present">Present</string>
    <string name="late">Late</string>
    <string name="date_hint">dd-mm-yyyy</string>
</resources>
