<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_lecture">

    <include
        android:id="@+id/tool_bar_ajout_seance"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteY="207dp" />

    <EditText
        android:id="@+id/date"
        android:layout_width="152dp"
        android:layout_height="103dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:ems="10"
        android:hint="@string/date_hint"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="@+id/course_name"
        app:layout_constraintTop_toTopOf="@+id/textView_date" />

    <EditText
        android:id="@+id/debut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/start_time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/textView_heure" />

    <EditText
        android:id="@+id/fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/end_time_hint"
        android:inputType="time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/debut" />

    <TextView
        android:id="@+id/textView_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="143dp"
        android:text="@string/date"
        app:layout_constraintEnd_toStartOf="@+id/textView_heure"
        app:layout_constraintTop_toTopOf="@+id/course_name" />

    <TextView
        android:id="@+id/textView_heure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="172dp"
        android:layout_marginTop="120dp"
        android:text="@string/time"
        app:layout_constraintStart_toStartOf="@+id/date"
        app:layout_constraintTop_toTopOf="@+id/course_name" />

    <Spinner
        android:id="@+id/group"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/date" />

    <Spinner
        android:id="@+id/lecturer"
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/group" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="178dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="262dp" />

    <TextView
        android:id="@+id/course_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textSize="50dp"
        app:layout_constraintTop_toBottomOf="@+id/tool_bar_ajout_seance" />

    <EditText
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/location"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lecturer"
        app:layout_constraintVertical_bias="0.005" />

</android.support.constraint.ConstraintLayout>